[package]
name = "amdmsr"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[package.metadata.wdk.driver-model]
driver-type = "KMDF"
kmdf-version-major = 1
target-kmdf-version-minor = 33

[dependencies]
wdk = "0.4.1"
wdk-alloc = "0.4.1"
wdk-panic = "0.4.1"
wdk-sys = "0.5.1"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"

[build-dependencies]
wdk-build = "0.5.1"
